@@ -1,6 +1,6 @@
 AUX database-credentials-debian.patch 765 RMD160 429bfe3aae959891d6bcbed4df479aaee1f210d3 SHA1 bde6025a801c5a0be5abae69a386ca885bcc54fd SHA256 bf292f8617cbe441fd81a3bc72055999f7f40d5aa8895b4c5b4d8e7409f3b3d6
 AUX postinstall-en-2.3.txt 1695 RMD160 2607111f4a6bf12439a5c175c6962a293c8dfbe6 SHA1 faee6ea464430ca5694f408d220e28dbcb59cad3 SHA256 42474dc5f921af2f6512c281a6ae3adbc7f58e00932e200f3aa81cc7b20b7063
 DIST postfixadmin_2.3.tar.gz 1558791 RMD160 c697b757a3730fdf8a8f107a0a474056edf6f2fc SHA1 c778a9dc115cba41933737fe8ee180dd5c7299e2 SHA256 e9fbb1dbb5567f01d87080427d42017c4afca85cfde5442219cb6b12023d1407
-EBUILD postfixadmin-2.3.ebuild 2574 RMD160 ad18d4ffba72323ed6edb25b58715c976786db92 SHA1 6979d0ff126781d680c5f8c0fbe42998305b2da6 SHA256 59bd1359629bfe1a365eced6d52b278ffefeba846080f149e677c5ee842a31b2
+EBUILD postfixadmin-2.3.ebuild 2570 RMD160 b9e3a7160b4ba00886b845917cc43dfed7777b22 SHA1 890177b48b9447842605924d3a58dd84a8b76c30 SHA256 25b0ce61826aa1c1cb2c94e8e4a542405b9bfca967a4c8cf24f1bf72872f1e55
 MISC ChangeLog 319 RMD160 00f104e389ed88bd9ba9ffaa5561e5feb4384203 SHA1 21408bcb97a78170c96e2540f63f4dc1ba5b8b36 SHA256 bee131abb4144640eb778d5880a9137adbda768c701a81a27e60af061aefc0c4
-MISC metadata.xml 615 RMD160 bdad0a5f25cc7a832c477c8517674f80fab36f35 SHA1 09c21ab4daf98733ba0c796cda36fe184bb54a33 SHA256 d3304beab3fee8e36ebf6ae3ddd1c9b28fa7503c8a0e31f35122b6fc241b56d8
+MISC metadata.xml 614 RMD160 a6a3d90ead24d5e933042d1302f790f0f15d0b3b SHA1 f5e37c3f7145dce465a89e9ea4eec5aeb6cfdbc1 SHA256 4eec24d7fa99502a0473875ee687330744e6f1ad78f3300714464092f691f22c
