@@ -1,6 +1,10 @@
 # ChangeLog for www-apps/postfixadmin
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  08 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  postfixadmin-2.3.ebuild, metadata.xml:
+  fix issue
 
   29 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +postfixadmin-2.3.ebuild, +files/postinstall-en-2.3.txt,
